<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_successful" />

        <ImageView
            android:id="@+id/imageViewGoogle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_profile_details" />

        <TextView
            android:id="@+id/textNameGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textEmailGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textIdGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textTokenGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_profile_details" />

        <TextView
            android:id="@+id/facebook_id_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <!--<TextView
            android:id="@+id/facebook_id_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />-->

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First Name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/facebook_first_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Middle Name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/facebook_middle_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Last Name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/facebook_last_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />-->

        <TextView
            android:id="@+id/facebook_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <!--<TextView
            android:id="@+id/facebook_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />-->

        <TextView
            android:id="@+id/facebook_profile_picture_url_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture_url"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <!--<TextView
            android:id="@+id/facebook_profile_picture_url_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />-->

        <TextView
            android:id="@+id/facebook_email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <!--<TextView
            android:id="@+id/facebook_email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />-->

        <TextView
            android:id="@+id/facebook_access_token_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_token"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />

        <!--<TextView
            android:id="@+id/facebook_access_token_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorem Ipsum"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black" />-->


    </LinearLayout>

</ScrollView>