<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/pet_mate"
            android:textSize="36sp" /> <!--PetMate Header-->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/logo" /> <!--PetMate Logo-->

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" /> <!--Google Sign In-->

        <!--<com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />--> <!--Facebook Sign In-->

        <Button
            android:id="@+id/facebook_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/log_in_with_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/black" /> <!--Facebook Custom Sign In-->

        <Button
        android:id="@+id/btn_petRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go to Pet Registration" /> <!--Pet Registration Button-->

        <Button
            android:id="@+id/btn_myPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go to My Pet" /> <!--My Pet Button-->

        <Button
            android:id="@+id/btn_homePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go to Home Page" /> <!--Home Page Button-->

    </LinearLayout>
</ScrollView>